FIX: -> Overflow // inputField max-width :60%

--- a/styles/contactSectionStyles/contactSectionStyles.css
+++ b/styles/contactSectionStyles/contactSectionStyles.css
@@ -10,6 +10,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    max-width: 100vw;
+    box-sizing: border-box;
+    overflow: hidden;
+
 }
 
 
@@ -29,6 +34,8 @@
 
     margin: 20px;
 
+
+
 }
 .field{
     margin: 10px;
@@ -37,6 +44,11 @@
     justify-content: center;
     align-items: center;
 
+    background-color: red;
+
+
+    padding: 20px;
+    overflow: hidden;
 
 }
 
@@ -52,7 +64,7 @@
     border: black solid 2px;
     border-radius: 10px;
 
-    max-width: 70%;
+    max-width: 60%;
 }
 .field textarea{
     font-size: 1.3rem;
@@ -62,7 +74,8 @@
     border: black solid 2px;
     border-radius: 10px;
 
-    max-width: 70%;
+    max-width: 60%;
+
 }
 
 .field input:hover{
